@@ -283,16 +283,7 @@ int utime ();
 #  endif
 #endif
 
-#if STDC_HEADERS || HAVE_STRING_H
-#  include <string.h>
-   /* An ANSI string.h and pre-ANSI memory.h might conflict. */
-#  if !STDC_HEADERS && HAVE_MEMORY_H
-#    include <memory.h>
-#  endif /* not STDC_HEADERS and HAVE_MEMORY_H */
-#else /* not STDC_HEADERS and not HAVE_STRING_H */
-#  include <strings.h>
-   /* memory.h and strings.h conflict on some systems. */
-#endif /* not STDC_HEADERS and not HAVE_STRING_H */
+#include <string.h>
 
 #ifndef ERRNO_H_MISSING
 #include <errno.h>
